Añadido ejemplo de lectura directa de un Json y cambio de estilo del ejercicio 5

--- a/SegundaRelacionDeEjercicios/Ejercicio5/src/app/home/home.page.html
+++ b/SegundaRelacionDeEjercicios/Ejercicio5/src/app/home/home.page.html
@@ -18,6 +18,7 @@
         <ion-icon *ngIf="t.category == 'personal'" name="person"></ion-icon>
         <ion-icon *ngIf="t.category == 'trabajo'" name="briefcase"></ion-icon>
         <ion-icon *ngIf="t.category == 'estudios'" name="book"></ion-icon>
+        <ion-icon name="blank"></ion-icon>
         <ion-label>   {{ t.title }}</ion-label>
         <ion-icon (click)="goEditTask(t.id)" name="create">
         </ion-icon>
